force-app/main/default/objects/Appointment__c/fields/Calendar_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Event_Id__c</fullName>
    <description>Id of google calendar event for this appointment</description>
    <externalId>true</externalId>
    <label>Calendar Event Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>