force-app/main/default/objects/Appointment__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Patient for whom appointment is booked</description>
    <label>Patient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Patient Appointments</relationshipLabel>
    <relationshipName>PatientAppointments</relationshipName>
    <type>Lookup</type>
</CustomField>