force-app/main/default/objects/Appointment__c/fields/Physician__c.field-meta.xml
<CustomField>
    <fullName>Physician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Physician who examines the patient.</description>
    <label>Physician</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only physician contacts can be selected.</errorMessage>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Physician</value>
        </filterItems>
        <infoMessage>Displays physician contacts only.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Physician Appointments</relationshipLabel>
    <relationshipName>PhysicianAppointments</relationshipName>
    <type>Lookup</type>
</CustomField>