force-app/main/default/objects/Appointment__c/fields/Specialization__c.field-meta.xml
<CustomField>
    <fullName>Specialization__c</fullName>
    <formula>Physician__r.Specialization__r.Name</formula>
    <label>Specialization</label>
    <type>Text</type>
</CustomField>