force-app/main/default/objects/Appointment__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>Appointment start time</description>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>